--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <p style="text-align: center">Small Island Developing States (SIDS) and Least Developed Countries (LDCs) are on the frontlines of climate change — yet often lack the observational infrastructure needed for timely, reliable forecasts. Through global collaboration and regional partnerships, the <b>Data Buoy Cooperation Panel</b> works to fill that gap.</p>
         <p style="text-align: center">In the South Pacific, for instance, buoy deployments coordinated through DBCP Action Groups have improved wave forecasting and weather monitoring — crucial for fisheries, transport, and disaster response. In East Africa, real-time ocean data supports surge warnings and enhances storm prediction along vulnerable coasts.</p>
         <p style="text-align: center">By promoting <b>capacity building</b>, encouraging <b>technology transfer</b>, and supporting <b>regional deployment programs</b>, the DBCP ensures that ocean data reaches those who need it most. Initiatives led by the Task Team on Capacity Building empower local experts, while partnerships with agencies like OceanOPS and IOC regional alliances make long-term resilience possible.</p>
-        <h3 style="text-align: center; background-color: blue; color: white; padding: 10px""><i>We are all connected by the ocean. Let’s work together to ensure no coast is left behind.</i></h3>
+        <h3 style="text-align: center; background-color: #184596; color: white; padding: 10px""><i>We are all connected by the ocean. Let’s work together to ensure no coast is left behind.</i></h3>
   </div>
 </section>
 
