--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <img src="figures/session_01.jpg" alt="DBCP-40" />
         </figure>
      </div>
-     <div class="twoparts-right" style="background-color:#17449695; padding: 20px; color: white;" >
+     <div class="twoparts-right" style="background-color:#184596; padding: 20px; color: white;" >
      <h2>Beneath the surface of the State of Climate Report</h2>
         <p style="text-align: left">Behind every <b>WMO State of the Climate Report</b> is a story told by the ocean. Much of the report’s understanding of <b>ocean heat content</b>, <b>sea level rise</b>, and <b>marine biodiversity change</b> relies on high-quality data provided by global ocean observation networks — including the DBCP’s buoy systems.</p>
         <p style="text-align: left">As the ocean absorbs over 90% of Earth’s excess heat, accurate, long-term temperature and pressure data from buoys help track <b>warming trends</b> and <b>thermal expansion</b>, a major driver of sea level rise. These measurements also support models that assess how changing ocean conditions impact <b>marine ecosystems</b> and <b>fisheries</b> — lifelines for millions.</p>
