--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
   <!-- Statistics Section -->
   <section class="statistics">
     <div class="container">
+    <p style="padding: 5px; background-color:yellow;"><a href="https://www.ocean-ops.org/dbcp/" >Click here to access the old DBCP website</a></p>
     <h2 style="margin-bottom: 20px;">Listening to the ocean — tools that keep watch</h2>
     <div class="stats-grid">
       <div class="stat-item">
