--- a/contact_us.html
+++ b/contact_us.html
@@ -138,12 +138,12 @@
     <div class="content">
      <div class="twoparts-left">
         <figure>
-          <a href="mailto:cgallage@wmo.int"><img src="figures/contact_WMO.jpg" alt="contact_WMO" /></a>
+          <a href="mailto:cgallage@wmo.int"><img src="figures/Contact_WMO.jpg" alt="Contact_WMO" /></a>
         </figure>
      </div>
      <div class="twoparts-right">
         <figure>
-          <a href="mailto:ioc.secretariat@unesco.org"><img src="figures/contact_IOC.jpg" alt="contact_IOC" /></a>
+          <a href="mailto:ioc.secretariat@unesco.org"><img src="figures/Contact_IOC.jpg" alt="Contact_IOC" /></a>
         </figure>
      </div>
     </div>
