--- a/about.html
+++ b/about.html
@@ -410,24 +410,24 @@
     </p>
 
     <div class="content" >
-     <div class="fourparts-one">
+     <div class="tt-one">
         <figure>
         <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3006" >
         <img src="figures/tt-mb.jpg" alt="Task Team on Moored Buoys" /></a>
         </figure>
      </div>
-     <div class="fourparts-two">
+     <div class="tt-one-text">
         <p style="text-align: left">
           The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3006" ><b>Task Team on Moored Buoys</b></a> enhances global buoy operations by reviewing systems, fostering collaboration, and promoting multi-disciplinary approaches. It aligns buoy capabilities with ocean observation needs, improve data standards, tracks technology, and ensures compliance with WMO/IOC standards.
         </p>
      </div>
-     <div class="fourparts-three">
+     <div class="tt-two">
         <figure>
           <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3009" >
           <img src="figures/tt-wm.jpg" alt="Task Team on Wave Measurement" /></a>
         </figure>
      </div>
-     <div class="fourparts-four">
+     <div class="tt-two-text">
         <p style="text-align: left">
           The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3009" ><b>Task Team on Wave Measurement</b></a> coordinates intercomparisons of wave data across platforms and promotes high-quality spectral measurements from buoys. It fosters discussions on wave measurement best practices, user needs, and emerging technologies. It develops training materials, contributes to standards for reliable wave data, and shares advancements through workshops and scientific forums. 
         </p>
@@ -436,24 +436,24 @@
    </div>
 
     <div class="content" >
-     <div class="fourparts-one">
+     <div class="tt-one">
         <figure>
         <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3007" >
         <img src="figures/tt-dm.jpg" alt="Task Team on Data Management" /></a>
         </figure>
      </div>
-     <div class="fourparts-two">
+     <div class="tt-one-text">
         <p style="text-align: left">
           The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3007" ><b>Task Team on Data Management</b></a> oversees the quality and flow of buoy data, resolving overlaps, and liaising with WMO groups on observation requirements. It improves real-time and delayed-mode data distribution, aligns metadata standards with stakeholder needs, and ensures integration with OceanOPS. 
         </p>
      </div>
-     <div class="fourparts-three">
+     <div class="tt-two">
         <figure>
           <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3010" >
           <img src="figures/tt-es.jpg" alt="Task Team on Environmental Stewardship" /></a>
         </figure>
      </div>
-     <div class="fourparts-four">
+     <div class="tt-two-text">
         <p style="text-align: left">
           The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3010" ><b>Task Team on Environmental Stewardship</b></a> works to minimize the environmental impact of ocean buoy operations. It develops sustainable best practices, establishes baseline environmental impact assessments, maintains a repository of international regulations, and helps members implement eco-friendly solutions. 
         </p>
@@ -462,24 +462,24 @@
    </div>
 
     <div class="content" >
-     <div class="fourparts-one">
+     <div class="tt-one">
         <figure>
         <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3005" >
         <img src="figures/tt-cb.jpg" alt="Task Team on Capacity Building" /></a>
         </figure>
      </div>
-     <div class="fourparts-two">
+     <div class="tt-one-text">
         <p style="text-align: left">
           The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3005" ><b>Task Team on Capacity Building</b></a> develops and coordinates training programs for buoy operations. It reviews and updates training materials while assessing global capacity-building needs. It collaborates with partners like WMO, IOC/IODE, and GOOS to optimize resources and expand training opportunities. 
         </p>
      </div>
-     <div class="fourparts-three">
+     <div class="tt-two">
         <figure>
           <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3008" >
           <img src="figures/tt-iv.jpg" alt="Task Team on Data Impact and Value" /></a>
         </figure>
      </div>
-     <div class="fourparts-four">
+     <div class="tt-two-text">
         <p style="text-align: left">
           The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3008" ><b>Task Team on Data Impact and Value</b></a> . 
         </p>
@@ -488,24 +488,24 @@
    </div>
 
     <div class="content" >
-    <div class="fourparts-one">
+    <div class="tt-one">
         <figure>
           <a href="https://oceanexpert.org/index.php/group/271" >
           <img src="figures/itp.jpg" alt="International Tsunameter Partnership" /></a>
         </figure>
      </div>
-     <div class="fourparts-two">
+     <div class="tt-one-text">
         <p style="text-align: left">
           The <a href="https://oceanexpert.org/index.php/group/271" ><b>International Tsunameter Partnership</b></a> was established under the auspices of the IOC International Cooperation Group for the Indian Ocean Tsunami Warning and Mitigation System (IGC/IOTWS). Its purpose is to support the establishment, effectiveness and on-going viability and enhancement of tsunami detection and warning systems using deep ocean monitoring stations (tsunameters). 
         </p>
      </div>
-     <div class="fourparts-three">
+     <div class="tt-two">
         <figure>
           <a href="#" >
           <img src="figures/av.jpg" alt="Working Group on Anti Vandalism" /></a>
         </figure>
      </div>
-     <div class="fourparts-four">
+     <div class="tt-two-text">
         <p style="text-align: left">
           The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3008" ><b>Working Group on Anti Vandalism</b></a> was established with the primary objective of ensuring the continued attention within the DBCP, WMO and IOC to the subject of buoy vandalism and to the discovery, sharing and promotion of counter-vandalism best practices throughout the international buoy operator community.
         </p>
