--- a/gallery.html
+++ b/gallery.html
@@ -138,45 +138,45 @@
 
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="figures/gallery/SAIC_Tsunami_Buoy.JPG" alt="SAIC tsunami buoy">
+          <img src="figures/gallery/SAIC_Tsunami_Buoy.jpg" alt="SAIC tsunami buoy">
           <div class="gallery-caption">Science Applications International Corporation (SAIC) Tsunami Buoy (STB) system by the Far Eastern Ecological Center, Yuzhno-Sakhalinsk, for the Far Eastern Regional Hydrometeorological Research Institute (FERHRI), Vladivostok, Russian Federation</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/NOAA_tsunami_buoy2.JPG" alt="NOAA tsunami buoy">
+          <img src="figures/gallery/NOAA_tsunami_buoy2.jpg" alt="NOAA tsunami buoy">
           <div class="gallery-caption">The NOAA NWS National Data Buoy Center (NDBC) owns, operates, and maintains a network of tsunami buoy systems strategically located in open ocean throughout the Pacific, Atlantic, and Caribbean basins to measure and transmit water level variations as tsunami waves pass</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/DART_Tsunami_Buoy2.JPG" alt="DART tsunami buoy">
+          <img src="figures/gallery/DART_Tsunami_Buoy2.jpg" alt="DART tsunami buoy">
           <div class="gallery-caption">DART® real-time tsunami monitoring systems, developed by PMEL, are positioned at strategic locations throughout the ocean and play a critical role in tsunami forecasting</div>
         </div>
       </div>
 <br>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="figures/gallery/PIRATA.JPG" alt="PIRATA buoys are an observatory entirely dedicated to the study of ocean-atmosphere interactions in the Tropical Atlantic">
+          <img src="figures/gallery/PIRATA.jpg" alt="PIRATA buoys are an observatory entirely dedicated to the study of ocean-atmosphere interactions in the Tropical Atlantic">
           <div class="gallery-caption">PIRATA buoys are an observatory entirely dedicated to the study of ocean-atmosphere interactions in the Tropical Atlantic</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/Stratus23_buoy_maintenance.JPG" alt="Ray Graham and Nathan Smith of WHOI service Stratus23 buoy on March 18 2025">
+          <img src="figures/gallery/Stratus23_buoy_maintenance.jpg" alt="Ray Graham and Nathan Smith of WHOI service Stratus23 buoy on March 18 2025">
           <div class="gallery-caption">Ray Graham and Nathan Smith of WHOI service Stratus23 buoy on March 18 2025. <i>Photo: Maria Theresa Gatica (University de Concepcion, Chile)</i></div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/Triaxys.JPG" alt="TRIAXYS buoy">
+          <img src="figures/gallery/Triaxys.jpg" alt="TRIAXYS buoy">
           <div class="gallery-caption">TRIAXYS buoy measures and transmits directional wave data using the TRIAXYS solid state wave sensor, which provides near real-time access to continuous wave measurements. <i>Photo: AXYS Technologies</i></div>
         </div>
       </div>
 <br>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="figures/gallery/Wooden_buoy.JPG" alt="Wooden buoy">
+          <img src="figures/gallery/Wooden_buoy.jpg" alt="Wooden buoy">
           <div class="gallery-caption">Biodegradable wooden buoy created by the CLS Oceania built from accoya wood</div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/WHOTS-19.JPG" alt="The WHOI Hawaii Ocean Time-series Station (WHOTS)-19 buoy after deployment, with NOAA Ship Oscar Elton Sette in the background in June 2023">
+          <img src="figures/gallery/WHOTS-19.jpg" alt="The WHOI Hawaii Ocean Time-series Station (WHOTS)-19 buoy after deployment, with NOAA Ship Oscar Elton Sette in the background in June 2023">
           <div class="gallery-caption">The WHOI Hawaii Ocean Time-series Station (WHOTS)-19 buoy after deployment, with NOAA Ship Oscar Elton Sette in the background in June 2023. <i>Photo: Nico Llanos</i></div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/SVP-BRST buoys.JPG" alt="SVP-BRST buoys">
+          <img src="figures/gallery/SVP-BRST buoys.jpg" alt="SVP-BRST buoys">
           <div class="gallery-caption">SVP BRST buoy is a drifting buoy fitted with a Sea Surface Temperature sensor (SST), a Barometric Pressure sensor, a Drogue presence sensor, a High Resolution Sea Surface Temperature sensor (HRSST), a GPS positioning and an IRIDIUM satellite communication to transmit its data.</div>
         </div>
       </div>
