--- a/gallery.html
+++ b/gallery.html
@@ -161,7 +161,7 @@
           <div class="gallery-caption">Ray Graham and Nathan Smith of WHOI service Stratus23 buoy on March 18 2025. <i>Photo: Maria Theresa Gatica (University de Concepcion, Chile)</i></div>
         </div>
         <div class="gallery-item">
-          <img src="figures/gallery/Triaxys.jpg" alt="TRIAXYS buoy">
+          <img src="figures/gallery/TRIAXYS.jpg" alt="TRIAXYS buoy">
           <div class="gallery-caption">TRIAXYS buoy measures and transmits directional wave data using the TRIAXYS solid state wave sensor, which provides near real-time access to continuous wave measurements. <i>Photo: AXYS Technologies</i></div>
         </div>
       </div>
