--- a/contact_us.html
+++ b/contact_us.html
@@ -162,6 +162,7 @@
 <!-- WARNING: Please be aware of not changing anything beyond this line unless exeptionally necessary, thank you -->
 
   <!-- Footer Section -->
+  <!-- Footer Section -->
   <footer class="footer">
     <div class="container footer-content">
       <div class="footer-left">
@@ -178,7 +179,9 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright © 2025 Data Buoy Cooperation Panel. All Rights Reserved. Privacy Statement. Terms of Use.</p>
+      <p>© 2025 <a href="index.html">Data Buoy Cooperation Panel (DBCP)</a></p>
+      <ul class="footer-bottom-links">
+      <p><a href="copyright.html#Copyright">Copyright</a> | <a href="copyright.html#Disclaimer">Disclaimer</a> | <a href="copyright.html#Privacy_Policy">Privacy Policy</a></p>
     </div>
   </footer>
 
