--- a/gallery.html
+++ b/gallery.html
@@ -253,12 +253,9 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>© 2025 - DBCP</p>
+      <p>© 2025 <a href="index.html">Data Buoy Cooperation Panel (DBCP)</a></p>
       <ul class="footer-bottom-links">
-        <li><a href="#">Accessibility statement</a></li>
-        <li><a href="#">Sitemap</a></li>
-        <li><a href="#">Contact us</a></li>
-      </ul>
+      <p><a href="copyright.html#Copyright">Copyright</a> | <a href="copyright.html#Disclaimer">Disclaimer</a> | <a href="copyright.html#Privacy_Policy">Privacy Policy</a></p>
     </div>
   </footer>
 
