--- a/index.html
+++ b/index.html
@@ -240,11 +240,24 @@
 
   <!-- Footer Section -->
   <footer class="footer">
-    <div class="footer-bottom">
-      <a href="https://goosocean.org" ><img src="figures/2.png" alt="GOOS banner" style="height:200px"/></a>
+    <div class="container footer-content">
+      <div class="footer-left">
+        <h4>About the DBCP</h4>
+        <p>
+          The DBCP focuses on advancing ocean observation through collaborative efforts, enhancing data collection for marine and climate research.
+        </p>
+      </div>
+      <div class="footer-social">
+        <h4>DBCP Newsletter</h4>
+        <div class="social-icons">
+          <a href="newsletter.html"><img src="https://e7.pngegg.com/pngimages/378/897/png-clipart-flat-design-newsletter-design-orange-logo-thumbnail.png" alt="Newsletter Icon" style="width: 40px; height: auto;"></a>
+        </div>
+      </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright © 2025 Data Buoy Cooperation Panel. All Rights Reserved. Privacy Statement. Terms of Use.</p>
+      <p>© 2025 <a href="index.html">Data Buoy Cooperation Panel (DBCP)</a></p>
+      <ul class="footer-bottom-links">
+      <p><a href="copyright.html#Copyright">Copyright</a> | <a href="copyright.html#Disclaimer">Disclaimer</a> | <a href="copyright.html#Privacy_Policy">Privacy Policy</a></p>
     </div>
   </footer>
 
