--- a/share_data.html
+++ b/share_data.html
@@ -331,7 +331,9 @@ availability of meteorological and oceanographic information.
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright © 2025 Data Buoy Cooperation Panel. All Rights Reserved. Privacy Statement. Terms of Use.</p>
+      <p>© 2025 <a href="index.html">Data Buoy Cooperation Panel (DBCP)</a></p>
+      <ul class="footer-bottom-links">
+      <p><a href="copyright.html#Copyright">Copyright</a> | <a href="copyright.html#Disclaimer">Disclaimer</a> | <a href="copyright.html#Privacy_Policy">Privacy Policy</a></p>
     </div>
   </footer>
 
