--- a/about.html
+++ b/about.html
@@ -476,12 +476,12 @@
      <div class="tt-two">
         <figure>
           <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3008" >
-          <img src="figures/tt-iv.jpg" alt="Task Team on Data Impact and Value" /></a>
+          <img src="figures/tt-iv.jpg" alt="Task Team on Data Value and Impact of Buoys" /></a>
         </figure>
      </div>
      <div class="tt-two-text">
         <p style="text-align: left">
-          The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3008" ><b>Task Team on Data Impact and Value</b></a> . 
+          The DBCP <a href="https://www.ocean-ops.org/board?t=dbcp&groupid=3008" ><b>Task Team on Data Value and Impact of Buoys</b></a> focus on understanding of data buoy users' need and deepen relationships with them. It promote evaluations to optimize observing system design, promote the use of ocean buoy data, contribute and provide leadership in both scientific understanding and technology development for continues improvement of essential ocean and climate variables.
         </p>
      </div>
  
