--- a/platform.html
+++ b/platform.html
@@ -197,7 +197,7 @@
     <div class="content content-float">
       <h2 style="text-align: left">Moored buoys</h2>
       <figure class="floating-image">
-        <img src="figures/Moored_buoy.png" alt="Moored buoy">
+        <img src="figures/moored_buoy.png" alt="Moored buoy">
       </figure>
       <div class="text-content">
         <p style="text-align: left">
